# DiningPhilosophers

./: CMakeLists.txt  main.cpp
Algorithm/: Fork.h  Philosopher.cpp  Philosopher.h  Table.cpp  Table.h
Menu/: Menu.cpp  Menu.h  MenuItem.h
Menu/Submenus/: SimulationItem.cpp  SimulationItem.h
Visualizer/: Visualizer.cpp  Visualizer.h
